<resources>
    <string name="app_name">Engineer\'s metal calcs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="calc">Расчёт</string>
    <string name="calc1">Расчёт 1</string>
    <string name="calc2">Расчёт 2</string>

    <string name="saved_calcs">Сохранённые расчёты</string>
    <string name="saved_calc">Сохранённый расчёт</string>
    <string name="saved">Сохранено</string>
    <string name="not_saved">Не удалось сохранить</string>
    <string name="save">Сохранить</string>
    <string name="picture">Картинка</string>

    <string name="main_menu">Главное меню</string>
    <string name="turnOff">Выключить</string>
    <string name="calcs">Расчёты</string>
    <string name="guide">Справочник</string>
    <string name="stored_calcs">Хранимые расчёты</string>
    <string name="main_menu_button1">Температура заливки</string>
    <string name="main_menu_button2">Литейный расчёт</string>
    <string name="main_menu_button3">Шихтовка</string>
    <string name="main_menu_button4">Контроль качества литейной продукции</string>
    <string name="main_menu_button5">Справочник модельщика и формовщика</string>

    <string name="likvid_calc_menu_button1">Заливка фасонного литья</string>
    <string name="likvid_calc_main_menu_button2">Заливка слитков</string>
    <string name="likvid_calc_main_menu_button3">Справочник температур плавления металлов и ферросплавов</string>
    <string name="calc_weight_of_the_cargo">Расчёт массы груза</string>
    <string name="calc_weight_of_the_cargo_with_rods">Расчёт массы груза со стержнями</string>
    <string name="calc_weight_of_the_cargo_without_rods">Расчёт массы груза без стержней</string>

    <string name="date">Дата</string>
    <string name="description">Описание</string>
    <string name="schemes">Схемы</string>
    <string name="name">Название</string>
    <string name="result">Результат</string>

    <string name="C">C</string>
    <string name="Si">Si</string>
    <string name="Mn">Mn</string>
    <string name="P">P</string>
    <string name="S">S</string>
    <string name="Cr">Cr</string>
    <string name="Ni">Ni</string>
    <string name="Cu">Cu</string>
    <string name="Al">Al</string>
    <string name="Ti">Ti</string>
    <string name="V">V</string>
    <string name="Mo">Mo</string>
    <string name="W">W</string>

    <string name="calculate">Рассчитать</string>
    <string name="tempCast">Заливка, \u2103</string>
    <string name="likvidAnsw">Ликвидус (Т начала кристализации), \u2103</string>
    <string name="tempInStove">Температура в печи, \u2103</string>

    <string name="rename">Переименовать</string>
    <string name="change_description">Изменить описание</string>
    <string name="remove_description">Убрать описание</string>
    <string name="remove">Удалить</string>

    <string name="remove_item_window">Удалить из списка?</string>
    <string name="remove_description_of_item_window">Убрать описание?</string>
    <string name="rename_item_window">Введите новое название</string>
    <string name="name_item_window">Введите название</string>
    <string name="change_description_item_window">Введите новое описание</string>
    <string name="description_item_window">Введите описание</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="ready">Готово</string>
    <string name="confirm">Подтверждение</string>
    <string name="button">Кнопка</string>

    <!--    Единицы измерения-->
    <string name="mm">мм</string>
    <string name="cm">см</string>
    <string name="dm">дм</string>
    <string name="m">м</string>
    <string name="km">км</string>

    <string name="g">г</string>
    <string name="kg">кг</string>
    <string name="c">ц</string>
    <string name="t">тонн</string>

    <string name="mm3">мм3</string>
    <string name="cm3">см3</string>
    <string name="dm3">дм3</string>
    <string name="m3">м3</string>

    <!--    Расчёт массы груза без стержней-->
    <string-array name="weightCargoArrayWithout">
        <item>Объем полости над отливкой в верхней ПФ до уровня металла в литниковой воронке (V)</item>
        <item>Производственный коэф запаса на удельный вес жидкого металла</item>
        <item>Масса груза для формы без стержней</item>
    </string-array>

    <!--    Расчёт массы груза без стержней-->
    <string-array name="weightCargoArrayWith">
        <item>Объем полости над отливкой в верхней ПФ до уровня металла в литниковой воронке (V)</item>
        <item>Объем стержней без стержневых знаков</item>
        <item>Производственный коэффициент запаса на удельный вес жидкого металла</item>
        <item>Производственный коэффициент 1</item>
        <item>Производственный коэффициент 2</item>
        <item>Масса груза для формы со стержнями</item>
    </string-array>

    <!--    Названия единиц расчётов для расчёта массы груза без стрежней-->
    <string name="Weight_V">V</string>
    <string name="Weight_K">K</string>
    <string name="Weight_Pb">Pb</string>

    <string name="Weight_V1">V1</string>
    <string name="Weight_V2">V2</string>
    <string name="Weight_Kp">Kp</string>
    <string name="Weight_k1">k1</string>
    <string name="Weight_k2">k2</string>
    <string name="Weight_Pc">Pc</string>
    <!--    Названия единиц расчётов для расчёта массы груза со стержнями-->

    <!--    Заголовки types для локальной БД -->
    <string-array name="types">
        <item>@string/type01</item>
        <item>@string/type3</item>
        <item>@string/type4</item>
        <item>@string/type5</item>
        <item>@string/type6</item>
        <item>@string/type7</item>
        <item>@string/type8</item>
        <item>@string/type9</item>
        <item>@string/type10</item>
        <item>@string/type11</item>
        <item>@string/type12</item>
        <item>@string/type13</item>
    </string-array>

    <string name="type01">Масса груза</string>
    <string name="type1">Масса груза без стержней</string>
    <string name="type2">Масса груза со стержнями</string>
    <string name="type3">Температура заливки фасонного литья</string>
    <string name="type4">Температура заливки слитков</string>
    <string name="type5">Литниково-питающая система (Простой)</string>
    <string name="type6">Литниково-питающая система (Расширенный)</string>
    <string name="type7">Классическая прибыль 1</string>
    <string name="type8">Классическая прибыль 2</string>
    <string name="type9">Классическая прибыль 3</string>
    <string name="type10">Экзотермическая прибыль</string>
    <string name="type11">Боковая прибыль</string>
    <string name="type12">Время выдержки отливки в форме</string>
    <string name="type13">Шихта</string>
</resources>