<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LikvidTempMenuFragment"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <Button
                style="@style/CustomBigMenuButton"
                android:id="@+id/likvid_calc_menu_button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/marginTopLeft"
                android:layout_marginLeft="@dimen/marginTopLeft"
                android:text="@string/likvid_calc_menu_button1"
                />
            <Button
                style="@style/CustomBigMenuButton"
                android:id="@+id/likvid_calc_main_menu_button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/marginTopLeft"
                android:layout_marginLeft="@dimen/marginTopLeft"
                android:layout_marginRight="@dimen/marginTopLeft"
                android:text="@string/likvid_calc_main_menu_button2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <Button
                style="@style/CustomBigMenuButton"
                android:id="@+id/likvid_calc_main_menu_button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/marginTopLeft"
                android:layout_marginLeft="@dimen/marginTopLeft"
                android:text="@string/likvid_calc_main_menu_button3"
                />
            <Button
                style="@style/CustomBigMenuButton"
                android:id="@+id/likvid_calc_main_menu_button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/marginTopLeft"
                android:layout_marginLeft="@dimen/marginTopLeft"
                android:layout_marginRight="@dimen/marginTopLeft"
                android:text="@string/saved_calcs"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <Button
                android:visibility="invisible"
                style="@style/CustomBigMenuButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/marginTopLeft"
                android:layout_marginLeft="@dimen/marginTopLeft"
                android:layout_marginRight="@dimen/marginTopLeft"
                android:layout_marginBottom="@dimen/marginTopLeft"
                />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>